--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,8 +41,9 @@ path {
 
 
 .Vector {
-  stroke: #cde;
-  stroke-width: 3;
+  stroke: #def;
+  stroke-width: 5;
+  filter: drop-shadow(1px 1px 0px black);
 }
 
 .Vector--selected {
@@ -54,7 +55,7 @@ path {
 }
 
 #marker-arrow path{
-  fill: #cde;
+  fill: #def;
 }
 
 .Line {
