--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,98 +1,8 @@
-$background-color: #232528;
-$border-color: #333;
+@import "variables.scss";
+@import "breakpoints.scss";
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background: $background-color;
-  color: #aaa;
-  font-family: Helvetica, Arial, sans-serif;
-}
-
-.App {
-  display: flex;
-  width: 100%;
-  margin: 0 auto;
-  max-width: 1500px;
-  padding: 20px;
-}
-
-.Controls {
-  order: 1;
-  flex-basis: 400px;
-  flex-shrink: 0;
-}
-
-.Image {
-  margin-right: 50px;
-}
-
-svg {
-  overflow: visible;
-  display: block;
-  box-shadow: 
-    0 0 0 1px $border-color,
-    0 0 0 5px $background-color, 0 0 0 6px $border-color,
-    0 0 0 10px $background-color, 0 0 0 11px $border-color;
-}
-
-marker {
-  overflow: visible;
-}
-
-path {
-  stroke-linecap: round;
-  fill: none;
-}
-
-.GridLine {
-  stroke: $border-color;
-}
-
-
-.Vector {
-  stroke: #def;
-  stroke-width: 5;
-  filter: drop-shadow(1px 1px 0px black);
-}
-
-.Vector--selected {
-  stroke: blue;
-}
-
-#marker-circle circle {
-  fill: blue;
-}
-
-#marker-arrow path{
-  fill: #def;
-}
-
-.Controls {
-  background: $background-color;
-}
-
-.Control {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 15px;
-}
-
-.Control-label {
-  flex-basis: 100%;
-  margin-bottom: 10px;;
-}
-
-.Control-inputWrapper {
-  flex-basis: 33.33%;
-  flex-shrink: 0;
-}
-.Control-value {
-  flex-basis: 33.33%;
-  text-align: right;
-  flex-shrink: 0;
-}
+@import "main.scss";
+@import "range-input.scss";
+@import "form.scss";
+@import "controls.scss";
+@import "svg.scss";
