--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -6,13 +6,15 @@ button {
   color: #999;
   display: inline-block;
   font-size: 14px;
+  line-height: 1;
   margin-bottom: 10px;
   margin-right: 10px;
   outline: none;
   padding: 8px 18px;
-  transition: all 300ms;
+  position: relative;
   text-decoration: none;
-  line-height: 1;
+  transition: all 300ms;
+  z-index: 10;
 
   &:hover {
     color: #BBB;
