--- a/src/scss/controls.scss
+++ b/src/scss/controls.scss
@@ -7,7 +7,7 @@
 
 .Control-label {
   flex-basis: 100%;
-  margin-bottom: 10px;;
+  margin-bottom: 6px;;
 }
 
 .Control-inputWrapper {
@@ -35,4 +35,28 @@
 
 .Controls-reset {
   display: block;
+}
+
+
+.Controls-title {
+  font-size: 26px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.Controls-description {
+  margin-bottom: 20px;
+  
+  p {
+    margin-bottom: 10px;
+  }
+  
+  a {
+    margin-right: 10px;
+    transition: all 250ms;
+
+    &:hover {
+      color: #fff !important;
+    }
+  }
 }
