Added note about failed downloads in chrome

--- a/src/scss/svg.scss
+++ b/src/scss/svg.scss
@@ -35,3 +35,10 @@ path {
   display: block;
 }
 
+.Image-downloadNote {
+  font-size: 14px;
+  color: #777;
+  line-height: 18px;
+  max-width: 600px;
+  margin-top: 40px;
+}
