Added link to the title

--- a/src/scss/controls.scss
+++ b/src/scss/controls.scss
@@ -44,6 +44,10 @@
   display: inline-block;
 }
 
+.Controls-titleLine {
+  text-decoration: none;
+}
+
 .Controls-description {
   margin-bottom: 20px;
   
