--- a/src/scss/controls.scss
+++ b/src/scss/controls.scss
@@ -42,9 +42,13 @@
   font-size: 26px;
   margin-bottom: 10px;
   display: inline-block;
+
+  span {
+    transition: all 250ms;
+  }
 }
 
-.Controls-titleLine {
+.Controls-titleLink {
   text-decoration: none;
 }
 
