Updated range sliders, added analytics

--- a/src/scss/range-input.scss
+++ b/src/scss/range-input.scss
@@ -1,88 +1,7 @@
-
-input[type=range] {
-  -webkit-appearance: none;
-  width: 60%;
-  background: none;
-  padding: 0;
+.MuiSlider-root {
+  color: #eee !important;
 }
 
-input[type=range]:focus {
-  outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8px;
-  cursor: pointer;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 4px;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  height: 20px;
-  width: 20px;
-  border-radius: 10px;
-  background: #DDD;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -6px;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: rgba(255, 255, 255, 0.3);
-}
-
-input[type=range]:focus::-webkit-slider-thumb {
-  background: #2980B9;
-}
-
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 8px;
-  cursor: pointer;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 25px;
-}
-
-input[type=range]::-moz-range-thumb {
-  height: 20px;
-  width: 20px;
-  border-radius: 10px;
-  background: #DDD;
-  cursor: pointer;
-}
-
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 10px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-
-input[type=range]::-ms-fill-lower {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 50px;
-}
-
-input[type=range]::-ms-fill-upper {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 50px;
-}
-
-input[type=range]::-ms-thumb {
-  height: 20px;
-  width: 20px;
-  border-radius: 10px;
-  background: #DDD;
-  cursor: pointer;
-}
-
-input[type=range]:focus::-ms-fill-lower {
-  background: rgba(255, 255, 255, 0.2);
-}
-
-input[type=range]:focus::-ms-fill-upper {
-  background: rgba(43, 43, 43, 0.1);
+.MuiSlider-valueLabel {
+  color: #000;
 }
