--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,8 @@
-@import "variables.scss";
-@import "breakpoints.scss";
+@import 'variables.scss';
+@import 'breakpoints.scss';
 
-@import "main.scss";
-@import "range-input.scss";
-@import "form.scss";
-@import "controls.scss";
-@import "svg.scss";
+@import 'main.scss';
+@import 'range-input.scss';
+@import 'form.scss';
+@import 'controls.scss';
+@import 'svg.scss';
